feature: 修改流程控制文案 issue #1528

--- a/src/frontend/locale/pipeline/en-US.json
+++ b/src/frontend/locale/pipeline/en-US.json
@@ -757,7 +757,7 @@
         "timeoutDesc": "All the integers between 0 and 10080 with 0 indicating the maximum timeout allowed by the system",
         "timeoutPlaceholder": "Specifies the maximum time, in minutes, that a task is allowed to execute before being canceled by server. A zero value indicates an infinite timeout.",
         "atomRunCondition": "Run this task",
-        "atomPreSuc": "Only when all previous tasks have succeeded",
+        "atomPreSuc": "Run when all pre-plugins run successfully (including continue when failed)",
         "atomEvenFail": "Even if a previous task has failed, unless the build was canceled",
         "atomOnlyFail": "Only when a previous task has failed",
         "varMatch": "run it when all the custom variables are macthed",
