--- a/src/frontend/locale/pipeline/zh-CN.json
+++ b/src/frontend/locale/pipeline/zh-CN.json
@@ -758,7 +758,7 @@
         "timeoutDesc": "10080之间的整数，0表示系统允许的最大超时时间",
         "timeoutPlaceholder": "10080之间的整数，0表示系统允许的最大超时时间",
         "atomRunCondition": "何时运行本插件",
-        "atomPreSuc": "所有前置插件运行成功时运行",
+        "atomPreSuc": "所有前置插件运行成功时运行（包括失败时继续）",
         "atomEvenFail": "即使前面有插件运行失败也运行，除非被取消才不运行",
         "atomOnlyFail": "只有前面有插件运行失败时才运行",
         "varMatch": "自定义变量全部满足时才运行",
