bugfix: 流水线编辑界面面包屑文案应为“编辑” issue #1524

--- a/src/frontend/locale/pipeline/en-US.json
+++ b/src/frontend/locale/pipeline/en-US.json
@@ -89,6 +89,10 @@
     "stageOptionLabel": "Run this Stage",
     "stageTriggerDesc": "Multiple people separated by commas",
     "skipStageDesc": "SKIPED",
+    "pipelinesHistory": "Builds",
+    "pipelinesEdit": "Edit",
+    "pipelinesPreview": "Preview",
+    "pipelinesDetail": "Details",
     "execDetail": {
         "log": "Log",
         "setting": "Configuration",
@@ -366,7 +370,6 @@
         "logClose": "Log is closed",
         "logErr": "Other exceptions",
         "stageStatus": "Stage",
-        "execHistory": "Builds",
         "trendData": "Artifacts size trending",
         "chooseDateRange": "Please select a date range",
         "noPackages": " No artifacts found in this period",
