feature: 镜像详情页支持查看镜像完整路径 issue #1297

--- a/src/frontend/locale/store/en-US.json
+++ b/src/frontend/locale/store/en-US.json
@@ -1,5 +1,7 @@
 {
     "store": "Store",
+    "复制成功": "Copy successful",
+    "镜像地址": "Image Address",
     "点击查看YAML片段": "Click to view YAML fragment",
     "YAML片段": "YAML fragment",
     "点击申请成为协作者": "Click Apply to become a collaborator",
