--- a/src/frontend/locale/store/zh-CN.json
+++ b/src/frontend/locale/store/zh-CN.json
@@ -1,5 +1,7 @@
 {
     "store": "研发商店",
+    "复制成功": "复制成功",
+    "镜像地址": "镜像地址",
     "点击查看YAML片段": "点击查看YAML片段",
     "YAML片段": "YAML片段",
     "点击申请成为协作者": "点击申请成为协作者",
