feature: 优化手动执行界面流水线变量描述的布局展示 issue #1425

--- a/src/frontend/locale/pipeline/zh-CN.json
+++ b/src/frontend/locale/pipeline/zh-CN.json
@@ -428,7 +428,8 @@
         "selectNone": "全不选",
         "majorVersion": "主版本",
         "minorVersion": "特性版本",
-        "fixVersion": "修正版本"
+        "fixVersion": "修正版本",
+        "paramsInvalidMsg": "流水线执行参数出错"
     },
     "details": {
         "executeDetail": "执行详情",
