--- a/src/frontend/locale/pipeline/en-US.json
+++ b/src/frontend/locale/pipeline/en-US.json
@@ -427,7 +427,8 @@
         "selectNone": "Select none",
         "majorVersion": "Major version",
         "minorVersion": "Feature version",
-        "fixVersion": "Fix version"
+        "fixVersion": "Fix version",
+        "paramsInvalidMsg": "Params Invalid"
     },
     "details": {
         "executeDetail": "Build detail",
