--- a/src/frontend/locale/store/zh-CN.json
+++ b/src/frontend/locale/store/zh-CN.json
@@ -100,7 +100,7 @@
     "必填项": "必填项",
     "同意协作后，协作者将成为插件开发人员，可以：": "同意协作后，协作者将成为插件开发人员，可以：",
     "3、提交版本升级插件": "3、提交版本升级插件",
-    "1、修改插件代码": "'1、修改插件代码",
+    "1、修改插件代码": "1、修改插件代码",
     "2、修改插件私有配置": "2、修改插件私有配置",
     "4、在协作者自己的调试项目下使用测试版本": "4、在协作者自己的调试项目下使用测试版本",
     "审批成功": "审批成功",
