feature: 研发商店体验优化 issue #1863 - 上传图片改成200*200以上正方形 - 修改上架页面的取消路由 - 修改进度页面的面包屑

--- a/src/frontend/locale/store/en-US.json
+++ b/src/frontend/locale/store/en-US.json
@@ -166,7 +166,7 @@
     "请选择要上传的图片": "Please select an image to upload",
     "请上传png、jpg格式的图片": "Please upload images in png and jpg format",
     "请上传大小不超过2M的图片": "Please upload images that are no larger than 2M",
-    "请上传尺寸为512*512的图片": "Please upload images with a size of 512*512",
+    "请上传宽高大于等于200的正方形图片": "Please upload a square image with a width and height greater than or equal to 200",
     "概览": "Overview",
     "详情": "Details",
     "设置": "Setting",
@@ -376,7 +376,7 @@
     "修改Logo": "Edit Logo",
     "Logo必填": "Logo cannot be empty",
     "自定义": "Customize",
-    "只允许上传png、jpg，尺寸为512*512，大小不超过2M": "Only upload png and jpg, the size is 512 * 512, the size does not exceed 2M",
+    "只允许上传png、jpg，尺寸为大于200*200的正方形，大小不超过2M": "Only upload png and jpg, the size is larger than 200*200 square, the size does not exceed 2M",
     "系统自带": "System-provided",
     "请输入关键字搜索": "Enter keywords to search",
     "暂时没有插件": "No plugin available for now",
