--- a/src/frontend/locale/store/zh-CN.json
+++ b/src/frontend/locale/store/zh-CN.json
@@ -166,7 +166,7 @@
     "请选择要上传的图片": "请选择要上传的图片",
     "请上传png、jpg格式的图片": "请上传png、jpg格式的图片",
     "请上传大小不超过2M的图片": "请上传大小不超过2M的图片",
-    "请上传尺寸为512*512的图片": "请上传尺寸为512*512的图片",
+    "请上传宽高大于等于200的正方形图片": "请上传宽高大于等于200的正方形图片",
     "概览": "概览",
     "详情": "详情",
     "设置": "设置",
@@ -376,7 +376,7 @@
     "修改Logo": "修改Logo",
     "Logo必填": "Logo必填",
     "自定义": "自定义",
-    "只允许上传png、jpg，尺寸为512*512，大小不超过2M": "只允许上传png、jpg，尺寸为512*512，大小不超过2M",
+    "只允许上传png、jpg，尺寸为大于200*200的正方形，大小不超过2M": "只允许上传png、jpg，尺寸为大于200*200的正方形，大小不超过2M",
     "系统自带": "系统自带",
     "请输入关键字搜索": "请输入关键字搜索",
     "暂时没有插件": "暂时没有插件",
