--- a/src/frontend/locale/store/en-US.json
+++ b/src/frontend/locale/store/en-US.json
@@ -1,5 +1,7 @@
 {
     "store": "Store",
+    "由汉字、英文字母、数字、连字符(-)组成，长度小于20个字符": "Composed of Chinese characters, English letters, numbers, hyphens (-), the length is less than 20 characters",
+    "字段不超过20个字符": "Field does not exceed 20 characters",
     "复制成功": "Copy successful",
     "镜像地址": "Image Address",
     "点击查看YAML片段": "Click to view YAML fragment",
@@ -440,7 +442,7 @@
     "请输入源镜像名称，如 XXX/XXXX": "Please enter a image name, such as XXX/XXXX",
     "imageRepoUrl": "Please enter the Image library address, such as csighub.tencentyun.com",
     "镜像名称": "Name",
-    "请输入镜像名称": "Please enter a image name",
+    "请输入镜像名称，不超过20个字符": "Please enter the mirror name, no more than 20 characters",
     "标签": "Label",
     "请选择标签": "Please select Label",
     "适用机器": "Machine",
@@ -493,7 +495,7 @@
     "镜像在研发商店中的别名": "Image alias in Store",
     "镜像标识": "Image ID",
     "镜像英文名，为当前镜像在研发商店中的唯一标识": "The English name of the image, which is the unique identifier of the current image in the R&D store",
-    "请输入镜像标识": "Please enter the image ID",
+    "请输入镜像标识，不超过20个字符": "Please enter the image ID, no more than 20 characters",
     "在发布过程中，可以在该项目下调试镜像": "During the release process, you can debug the image under this project",
     "镜像版本": "Image version",
     "请选择镜像版本": "Please select the image version",
