--- a/src/frontend/locale/store/zh-CN.json
+++ b/src/frontend/locale/store/zh-CN.json
@@ -1,5 +1,7 @@
 {
     "store": "研发商店",
+    "由汉字、英文字母、数字、连字符(-)组成，长度小于20个字符": "由汉字、英文字母、数字、连字符(-)组成，长度小于20个字符",
+    "字段不超过20个字符": "字段不超过20个字符",
     "复制成功": "复制成功",
     "镜像地址": "镜像地址",
     "点击查看YAML片段": "点击查看YAML片段",
@@ -441,7 +443,7 @@
     "请输入源镜像名称，如 XXX/XXXX": "请输入源镜像名称，如 XXX/XXXX",
     "imageRepoUrl": "请输入源镜像库地址，如 csighub.tencentyun.com",
     "镜像名称": "镜像名称",
-    "请输入镜像名称": "请输入镜像名称",
+    "请输入镜像名称，不超过20个字符": "请输入镜像名称，不超过20个字符",
     "标签": "标签",
     "请选择标签": "请选择标签",
     "适用机器": "适用机器",
@@ -493,7 +495,7 @@
     "镜像在研发商店中的别名": "镜像在研发商店中的别名",
     "镜像标识": "镜像标识",
     "镜像英文名，为当前镜像在研发商店中的唯一标识": "镜像英文名，为当前镜像在研发商店中的唯一标识",
-    "请输入镜像标识": "请输入镜像标识",
+    "请输入镜像标识，不超过20个字符": "请输入镜像标识，不超过20个字符",
     "在发布过程中，可以在该项目下调试镜像": "在发布过程中，可以在该项目下调试镜像",
     "镜像版本": "镜像版本",
     "请选择镜像版本": "请选择镜像版本",
